# CarlaPedestrian

./: README.md  WalkerController_Version.py  crossing_2people.xml  simple_version.py  spawn_walkers_test.py
scenario/: CMakeLists.txt  package.xml
scenario/config/: walkers.yaml
scenario/launch/: scenario.launch
scenario/scripts/: carla_pedestrian_node_AI.py  example.py  spawn_walkers.py  spawn_walkers_test.py  spawn_walkers_wm.py  xmltest.py
scenario/src/: carla_pedestrian_node.py  crossing_2people.xml
